--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.13.2",
+    "body-parser": "^1.13.3",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
-    "express": "~4.13.1",
-    "morgan": "~1.6.1",
+    "express": "^4.13.3",
+    "jsonwebtoken": "^5.4.0",
+    "mongoose": "^4.1.12",
+    "morgan": "^1.6.1",
     "serve-favicon": "~2.3.0"
   }
 }
