--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "ejs" : "~0.8.5", 
     "body-parser": "^1.10.2",
     "chai": "~1.8.1",
     "cookie-parser": "^1.3.3",
+    "debug": "^2.1.1",
+    "ejs": "~0.8.5",
     "express": "^4.11.1",
+    "express-paginate": "0.0.9",
     "express-session": "^1.10.1",
     "mocha": "~1.14.0",
     "mongoose": "^4.1.12",
@@ -18,8 +20,7 @@
     "passport": "~0.1.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^1.0.0",
-    "should": "~2.1.0",
     "serve-favicon": "^2.2.0",
-    "debug": "^2.1.1"
+    "should": "~2.1.0"
   }
 }
