--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,6 @@
 .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
 !.elasticbeanstalk/*.global.yml
+# I manually added the following two lines sgd
 aws_service_roll.txt
 get-pip.py
